manifests/recall/recall-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: recall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recall 
  template:
    metadata:
      labels: 
        app: recall 
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rs-recall
        image:  rs/recall:latest
        ports:
          - name: http
            containerPort: 5500
        resources:
          requests: 
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
      - name: rs-recall-plugin
        image:  rs/recall-plugin:latest
        ports:
          - name: http
            containerPort: 50051
        resources:
          requests: 
            cpu: 3000m
            memory: 4096Mi
          limits:
            cpu: 8000m
            memory: 8192Mi
        volumeMounts:
          - name: persistent-storage
            mountPath: /rs-data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
