manifests/recall/recall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recall
spec: 
  type: ClusterIP
  selector:
    app: recall
  ports:
  - name: http
    port: 5500
    targetPort: 5500
